Add app.kubernetes.io/instance label for flux logs
Fixes weaveworks/flux2-openshift#4

Signed-off-by: Kingdon Barrett <kingdon@weave.works>

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -8,6 +8,8 @@ patches:
       kind: Deployment
       metadata:
         name: all
+        labels:
+          app.kubernetes.io/instance: flux-system
       spec:
         template:
           spec:
