--- a/templates/clusterserviceversion.yaml
+++ b/templates/clusterserviceversion.yaml
@@ -433,37 +433,443 @@ spec:
     spec:
       clusterPermissions:
         - rules:
-            - apiGroups:
-                - "*"
-              resources:
-                - clusterroles
-                - clusterrolebindings
-                - namespaces
-                - services
-                - serviceaccounts
-                - pods
-                - deployments
-                - daemonsets
-                - statefulsets
-                - replicasets
-                - secrets
-                - events
-                - endpoints
-                - configmaps
-                - jobs
-                - customresourcedefinitions
-              verbs:
-                - "*"
-            - apiGroups:
-                - source.toolkit.fluxcd.io
-                - helm.toolkit.fluxcd.io
-                - kustomize.toolkit.fluxcd.io
-                - notification.toolkit.fluxcd.io
-              resources:
-                - "*"
-              verbs:
-                - "*"
-          serviceAccountName: default
+          - apiGroups:
+              - source.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - kustomize.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - helm.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - notification.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - image.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - ""
+            resources:
+              - namespaces
+              - secrets
+            verbs:
+              - get
+              - list
+              - watch
+          - apiGroups:
+              - ""
+            resources:
+              - events
+            verbs:
+              - create
+              - patch
+          - apiGroups:
+              - ""
+            resources:
+              - configmaps
+              - configmaps/status
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          - apiGroups:
+              - coordination.k8s.io
+            resources:
+              - leases
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          serviceAccountName: kustomize-controller
+        - rules:
+          - apiGroups:
+              - source.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - kustomize.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - helm.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - notification.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - image.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - ""
+            resources:
+              - namespaces
+              - secrets
+            verbs:
+              - get
+              - list
+              - watch
+          - apiGroups:
+              - ""
+            resources:
+              - events
+            verbs:
+              - create
+              - patch
+          - apiGroups:
+              - ""
+            resources:
+              - configmaps
+              - configmaps/status
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          - apiGroups:
+              - coordination.k8s.io
+            resources:
+              - leases
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          serviceAccountName: helm-controller
+        - rules:
+          - apiGroups:
+              - source.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - kustomize.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - helm.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - notification.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - image.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - ""
+            resources:
+              - namespaces
+              - secrets
+            verbs:
+              - get
+              - list
+              - watch
+          - apiGroups:
+              - ""
+            resources:
+              - events
+            verbs:
+              - create
+              - patch
+          - apiGroups:
+              - ""
+            resources:
+              - configmaps
+              - configmaps/status
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          - apiGroups:
+              - coordination.k8s.io
+            resources:
+              - leases
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          serviceAccountName: source-controller
+        - rules:
+          - apiGroups:
+              - source.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - kustomize.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - helm.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - notification.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - image.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - ""
+            resources:
+              - namespaces
+              - secrets
+            verbs:
+              - get
+              - list
+              - watch
+          - apiGroups:
+              - ""
+            resources:
+              - events
+            verbs:
+              - create
+              - patch
+          - apiGroups:
+              - ""
+            resources:
+              - configmaps
+              - configmaps/status
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          - apiGroups:
+              - coordination.k8s.io
+            resources:
+              - leases
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          serviceAccountName: notification-controller
+        - rules:
+          - apiGroups:
+              - source.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - kustomize.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - helm.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - notification.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - image.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - ""
+            resources:
+              - namespaces
+              - secrets
+            verbs:
+              - get
+              - list
+              - watch
+          - apiGroups:
+              - ""
+            resources:
+              - events
+            verbs:
+              - create
+              - patch
+          - apiGroups:
+              - ""
+            resources:
+              - configmaps
+              - configmaps/status
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          - apiGroups:
+              - coordination.k8s.io
+            resources:
+              - leases
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          serviceAccountName: image-reflector-controller
+        - rules:
+          - apiGroups:
+              - source.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - kustomize.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - helm.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - notification.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - image.toolkit.fluxcd.io
+            resources:
+              - "*"
+            verbs:
+              - "*"
+          - apiGroups:
+              - ""
+            resources:
+              - namespaces
+              - secrets
+            verbs:
+              - get
+              - list
+              - watch
+          - apiGroups:
+              - ""
+            resources:
+              - events
+            verbs:
+              - create
+              - patch
+          - apiGroups:
+              - ""
+            resources:
+              - configmaps
+              - configmaps/status
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          - apiGroups:
+              - coordination.k8s.io
+            resources:
+              - leases
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          serviceAccountName: image-automation-controller
       deployments:
         - name: source-controller
           spec:
